--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,8 @@
   },
   "homepage": "https://github.com/dzmitry-duboyski/reCAPTCHA-example#readme",
   "dependencies": {
-    "2captcha": "^3.0.5",
+    "2captcha-ts": "^2.0.1",
     "chalk": "3.0.0",
-    "env-cmd": "^10.1.0",
     "puppeteer": "^17.1.1"
   }
 }
